Add personalized Valentine message with live countdown timer

--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
             <div class="valentine-content">
                 <h1 class="valentine-title">Happy Valentine's Day!</h1>
                 <div class="valentine-message">
-                    <p>Congratulations, you found your valentine!</p>
-                    <p class="message-placeholder">[Your custom message goes here - edit this section!]</p>
-                </div>
-                <div class="valentine-footer">
-                    <span class="heart-emoji">&#10084;</span>
-                    <span>With all my love</span>
-                    <span class="heart-emoji">&#10084;</span>
+                    <p class="message-greeting">Dearest Kathy, I love you!</p>
+                    <p>It was <span id="time-since" class="time-counter"></span> ago that I first met you, and my life would never be the same!</p>
+                    <p>Fast forward to now, we've had 4 stinky kiddos, 3 houses, 1 rental, 5 cars, 3 "just us" adventures, countless weekend adventures with and without the kiddos, and so much more in the future.</p>
+                    <p>Every day I count myself lucky to have you as my wife, partner and my best friend. I could not imagine a life without you with me, and I never want to!</p>
+                    <p class="message-closing">With all the love in the world,</p>
+                    <p class="message-signature">Kyle =)</p>
                 </div>
             </div>
             <!-- Container for floating images/gifs (future enhancement) -->
